--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "husky": "^0.13.3"
+    "husky": "^0.13.3",
+    "nodemon": "^1.11.0"
   },
   "scripts": {
     "prepush": "npm run lint",
     "lint": "./node_modules/.bin/eslint **.js",
+    "dev": "./node_modules/.bin/nodemon app.js",
     "start": "node app.js"
   },
   "repository": {
